edit calculator title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="calculator-outer flex-items">
         <section id="calculator-title">
-          <h2> Awesome Baby Calculator </h2>
+          <h2> Awesome Simple Calculator </h2>
         </section>
         <section id="calculator-screen">
           <div id="screen-upper" class="flex-screen">
